--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -108,6 +108,9 @@ nnoremap("<leader>t", "<cmd>lua require('telescope').extensions.asynctasks.all()
 -- nnoremap("<leader>p", ":lua require'telescope'.extensions.project.project{}<CR>", "silent", "Telescope: Select Project")
 nnoremap("<leader>p", "<Cmd>Telescope zoxide list<CR>", "silent", "Telescope: Select Project")
 
+-- NvimTree Mappings
+nnoremap("<leader>`", "<Cmd>NvimTreeToggle<CR>", "silent", "NvimTree: Toggle Tree")
+
 --Remap for dealing with word wrap
 vim.api.nvim_set_keymap('n', 'k', "v:count == 0 ? 'gk' : 'k'", { noremap = true, expr = true, silent = true })
 vim.api.nvim_set_keymap('n', 'j', "v:count == 0 ? 'gj' : 'j'", { noremap = true, expr = true, silent = true })
