[Neovim] Fix nvim-bqf.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -85,7 +85,7 @@ require('packer').startup(function()
   -- Keymap Plugins
   use { 'b0o/mapx.nvim', requires = { 'folke/which-key.nvim' } }
   -- Quickfix Plugin
-  use {'kevinhwang91/nvim-bqf', ft = 'qf'}
+  use {'kevinhwang91/nvim-bqf'}
   -- Split/Window Management
   use 'sindrets/winshift.nvim'
   -- File Manager Plugin
