--- a/templates/nvim/lua/user_quickfix.lua.j2
+++ b/templates/nvim/lua/user_quickfix.lua.j2
@@ -3,7 +3,7 @@ vim.cmd([[
     hi link BqfPreviewRange Search
 ]])
 
-require('nvim-bqf').setup({
+require('bqf').setup({
     auto_enable = true,
     auto_resize_height = true, -- highly recommended enable
     preview = {
