--- a/templates/zellij/config.yaml.j2
+++ b/templates/zellij/config.yaml.j2
@@ -460,7 +460,7 @@ default_shell: {{ nvim_shell }}
 # Options:
 #   - true (default)
 #   - false
-#mouse_mode: false
+mouse_mode: false
 
 # Configure the scroll back buffer size
 # This is the number of lines zellij stores for each pane in the scroll back
