[Neovim] Add vim surround.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -64,6 +64,7 @@ require('packer').startup(function()
 --use 'yamatsum/nvim-cursorline'
   -- Motion Plugins
   use 'ggandor/lightspeed.nvim'
+  use 'tpope/vim-surround'
   -- Start Screen
   use {
     "startup-nvim/startup.nvim",
