--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -10,7 +10,7 @@ local m = require'mapx'.setup{ global = true, whichkey = true }
 nnoremap("<CR>", ":", "Enter Commands")
 
 -- WhichKey Mappings
-nnoremap(",", "<Cmd>WhichKey<CR>", "silent", "WhichKey: Show Keymappings")
+-- nnoremap(",", "<Cmd>WhichKey<CR>", "silent", "WhichKey: Show Keymappings")
 
 -- Split/Window Mappings
 nnoremap("<C-h>", "<C-w>h", "silent", "Split/Window: Move Left")
