--- a/templates/nvim/lua/user_neorg.lua.j2
+++ b/templates/nvim/lua/user_neorg.lua.j2
@@ -4,15 +4,15 @@ require('neorg').setup {
       ["core.defaults"] = {}, -- Load all the default modules
       ["core.keybinds"] = {
           config = {
-              default_keybinds = false,
-              neorg_leader = "<Leader>o"
+              default_keybinds = true,
+              neorg_leader = ","
           },
       },
       ["core.norg.concealer"] = {}, -- Allows for use of icons
       ["core.norg.dirman"] = { -- Manage your directories with Neorg
           config = {
               workspaces = {
-                  notes_workspace = "{{ nvim_neorg_dir }}"
+                  notes = "{{ nvim_neorg_dir }}"
               },
               autochdir = true, -- Automatically change the directory to the current workspace's root every time
               index = "index.norg", -- The name of the main (root) .norg file
