[Neovim] Disable <cr> bindings in norg mode.

--- a/templates/nvim/lua/user_neorg.lua.j2
+++ b/templates/nvim/lua/user_neorg.lua.j2
@@ -6,6 +6,11 @@ require('neorg').setup {
           config = {
               default_keybinds = true,
               neorg_leader = ","
+              hook = function(keybinds)
+                keybinds.unmap("norg", "n", "<CR>")
+                keybinds.unmap("norg", "n", "<M-CR>")
+                keybinds.map("norg", "n", "gtd", "<cmd>echo 'Hello!'<CR>")
+              end,
           },
       },
       ["core.norg.concealer"] = {}, -- Allows for use of icons
