--- a/templates/nvim/lua/user_neorg.lua.j2
+++ b/templates/nvim/lua/user_neorg.lua.j2
@@ -5,11 +5,10 @@ require('neorg').setup {
       ["core.keybinds"] = {
           config = {
               default_keybinds = true,
-              neorg_leader = ","
+              neorg_leader = ",",
               hook = function(keybinds)
                 keybinds.unmap("norg", "n", "<CR>")
                 keybinds.unmap("norg", "n", "<M-CR>")
-                keybinds.map("norg", "n", "gtd", "<cmd>echo 'Hello!'<CR>")
               end,
           },
       },
