[Neovim] Set default notes workspace.

--- a/templates/nvim/lua/user_neorg.lua.j2
+++ b/templates/nvim/lua/user_neorg.lua.j2
@@ -18,6 +18,7 @@ require('neorg').setup {
               workspaces = {
                   notes = "{{ nvim_neorg_dir }}"
               },
+              default_workspace = notes,
               autochdir = true, -- Automatically change the directory to the current workspace's root every time
               index = "index.norg", -- The name of the main (root) .norg file
           },
