--- a/templates/nvim/lua/user_neorg.lua.j2
+++ b/templates/nvim/lua/user_neorg.lua.j2
@@ -13,6 +13,9 @@ require('neorg').setup {
           },
       },
       ["core.norg.concealer"] = {}, -- Allows for use of icons
+      ["core.gtd.base"] = {},
+      ["core.norg.completion"] = {},
+      ["core.integrations.nvim-cmp"] = {},
       ["core.norg.dirman"] = { -- Manage your directories with Neorg
           config = {
               workspaces = {
