[Neovim] Disable unused neorg modules.

--- a/templates/nvim/lua/user_neorg.lua.j2
+++ b/templates/nvim/lua/user_neorg.lua.j2
@@ -13,8 +13,6 @@ require('neorg').setup {
           },
       },
       ["core.norg.concealer"] = {}, -- Allows for use of icons
-      ["core.norg.completion"] = {},
-      ["core.integrations.nvim-cmp"] = {},
       ["core.norg.dirman"] = { -- Manage your directories with Neorg
           config = {
               workspaces = {
@@ -25,10 +23,12 @@ require('neorg').setup {
               index = "index.norg", -- The name of the main (root) .norg file
           },
       },
-      ["core.gtd.base"] = {
-          config = {
-              workspace = notes,
-          }
-      },
+      -- ["core.norg.completion"] = {},
+      -- ["core.integrations.nvim-cmp"] = {},
+      -- ["core.gtd.base"] = {
+      --     config = {
+      --         workspace = notes,
+      --     }
+      -- },
   },
 }
