--- a/templates/nvim/lua/user_neorg.lua.j2
+++ b/templates/nvim/lua/user_neorg.lua.j2
@@ -2,6 +2,7 @@ require('neorg').setup {
   -- Tell Neorg what modules to load
   load = {
       ["core.defaults"] = {}, -- Load all the default modules
+      ["core.integrations.telescope"] = {},
       ["core.keybinds"] = {
           config = {
               default_keybinds = true,
