--- a/templates/zellij/config.yaml.j2
+++ b/templates/zellij/config.yaml.j2
@@ -452,7 +452,7 @@ default_shell: {{ nvim_shell }}
 
 # Choose the mode that zellij uses when starting up.
 # Default: normal
-#default_mode: locked
+default_mode: locked
 
 # Toggle enabling the mouse mode.
 # On certain configurations, or terminals this could
