--- a/templates/nvim/lua/user_statusline.lua.j2
+++ b/templates/nvim/lua/user_statusline.lua.j2
@@ -3,7 +3,7 @@ require('lualine').setup {
   options = { theme  = gruvbox },
   options = {
     section_separators = { left = '', right = '' },
-    component_separators = { left = '', right = '' }
+    component_separators = { left = '', right = '' },
     globalstatus = true,
   },
 }
