[Neovim] Add symbols outline.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -60,6 +60,7 @@ require('packer').startup(function()
   use 'hrsh7th/cmp-nvim-lsp'
   use 'saadparwaiz1/cmp_luasnip'
   use 'L3MON4D3/LuaSnip' -- Snippets plugin
+  use 'simrat39/symbols-outline.nvim'
   -- Cursorline Plugin
 --use 'yamatsum/nvim-cursorline'
   -- Motion Plugins
