--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -116,6 +116,9 @@ nnoremap("<leader>p", "<Cmd>Telescope zoxide list<CR>", "silent", "Telescope: Se
 -- NvimTree Mappings
 nnoremap("<leader>`", "<Cmd>NvimTreeToggle<CR>", "silent", "NvimTree: Toggle Tree")
 
+-- Nvim Symbols Outline Mappings
+nnoremap("<leader>S", "<Cmd>SymbolsOutline<CR>", "silent", "Symbol Outline: Toggle Outline")
+
 --Remap for dealing with word wrap
 vim.api.nvim_set_keymap('n', 'k', "v:count == 0 ? 'gk' : 'k'", { noremap = true, expr = true, silent = true })
 vim.api.nvim_set_keymap('n', 'j', "v:count == 0 ? 'gj' : 'j'", { noremap = true, expr = true, silent = true })
