--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -152,6 +152,9 @@ vim.o.shell = "{{ nvim_shell }}"
 -- Enable Filetype-specific Settings
 vim.cmd [[
   filetype plugin on
+  au BufRead,BufNewFile *.lua.j2 set filetype=lua
+  au BufRead,BufNewFile *.yaml.j2 set filetype=yaml
+  au BufRead,BufNewFile *.yml.j2 set filetype=yaml
 ]]
 
 -- Set Editor
