--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -90,6 +90,7 @@ require('packer').startup(function()
   use {'kevinhwang91/nvim-bqf'}
   -- Split/Window Management
   use 'sindrets/winshift.nvim'
+  use 'mrjones2014/smart-splits.nvim'
   -- File Manager Plugin
   use {'is0n/fm-nvim'}
   -- Terminal Plugins
@@ -265,36 +266,7 @@ require('startup_nvim')
 require('user_project')
 
 -- WinShift
-require("winshift").setup({
-  highlight_moving_win = true,  -- Highlight the window being moved
-  focused_hl_group = "Visual",  -- The highlight group used for the moving window
-  moving_win_options = {
-    -- These are local options applied to the moving window while it's
-    -- being moved. They are unset when you leave Win-Move mode.
-    wrap = false,
-    cursorline = false,
-    cursorcolumn = false,
-    colorcolumn = "",
-  },
-  -- The window picker is used to select a window while swapping windows with
-  -- ':WinShift swap'.
-  -- A string of chars used as identifiers by the window picker.
-  window_picker_chars = "ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890",
-  window_picker_ignore = {
-    -- This table allows you to indicate to the window picker that a window
-    -- should be ignored if its buffer matches any of the following criteria.
-    filetype = {  -- List of ignored file types
-      "NvimTree",
-    },
-    buftype = {   -- List of ignored buftypes
-      "terminal",
-      "quickfix",
-    },
-    bufname = {   -- List of regex patterns matching ignored buffer names
-      [[.*foo/bar/baz\.qux]]
-    },
-  },
-})
+require('user_window')
 
 -- Task Settings
 vim.g.asyncrun_open = 6
