--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -18,9 +18,9 @@ m.nname("<leader>w", "Split/Window")
 -- nnoremap("<C-j>", "<C-w>j", "silent", "Split/Window: Move Down")
 -- nnoremap("<C-k>", "<C-w>k", "silent", "Split/Window: Move Up")
 -- nnoremap("<C-l>", "<C-w>l", "silent", "Split/Window: Move Right")
-nnoremap("<C-h>", "<cmd>lua require('smart-splits').move_cursor_up()<CR>", "silent", "Split/Window: Move Left")
+nnoremap("<C-h>", "<cmd>lua require('smart-splits').move_cursor_left()<CR>", "silent", "Split/Window: Move Left")
 nnoremap("<C-j>", "<cmd>lua require('smart-splits').move_cursor_down()<CR>", "silent", "Split/Window: Move Down")
-nnoremap("<C-k>", "<cmd>lua require('smart-splits').move_cursor_left()<CR>", "silent", "Split/Window: Move Up")
+nnoremap("<C-k>", "<cmd>lua require('smart-splits').move_cursor_up()<CR>", "silent", "Split/Window: Move Up")
 nnoremap("<C-l>", "<cmd>lua require('smart-splits').move_cursor_right()<CR>", "silent", "Split/Window: Move Right")
 nnoremap("<C-w>h", "<cmd>lua require('smart-splits').resize_left()<CR>", "silent", "Split/Window: Resize Left")
 nnoremap("<C-w>j", "<cmd>lua require('smart-splits').resize_down()<CR>", "silent", "Split/Window: Resize Down")
