--- a/templates/nvim/lua/startup_nvim.lua.j2
+++ b/templates/nvim/lua/startup_nvim.lua.j2
@@ -29,10 +29,9 @@ require"startup".setup({
         margin = 5,
         content = {
             { " Find File", "Telescope find_files", "<leader>ff" },
-            { " Find Word", "Telescope live_grep", "<leader>lg" },
             { " Recent Files", "Telescope oldfiles", "<leader>of" },
-            { " File Browser", "Telescope file_browser", "<leader>fb" },
-            { " Colorschemes", "Telescope colorscheme", "<leader>cs" },
+            { " Find Word", "Telescope live_grep", "<leader>Q" },
+            { " File Browser", "Ranger", "<leader>sr" },
             { " New File", "lua require'startup'.new_file()", "<leader>nf" },
         },
         highlight = "String",
