[Neovim,Broot] Fix path to broot config.

--- a/templates/nvim/lua/user_fm.lua.j2
+++ b/templates/nvim/lua/user_fm.lua.j2
@@ -69,5 +69,5 @@ require('fm-nvim').setup{
 	},
 
 	-- Path to broot config
-	broot_conf = vim.fn.stdpath("data") .. "{{ broot_config }}/nvim.hjson"
+	broot_conf = "{{ broot_config }}/nvim.hjson"
 }
