--- a/templates/zellij/config.yaml.j2
+++ b/templates/zellij/config.yaml.j2
@@ -423,6 +423,21 @@ plugins:
     - path: strider
       tag: strider
 
+themes:
+  gruvbox:
+    fg: [235,219,178]
+    bg: [146,131,116]
+    black: [0,0,0]
+    gray: [243,245,246]
+    red: [251,73,52]
+    green: [184,187,38]
+    yellow: [250,189,47]
+    blue: [131,165,152]
+    magenta: [211,134,155]
+    cyan: [142,192,124]
+    white: [0,0,0]
+    orange: [254,128,25]
+
 # Choose what to do when zellij receives SIGTERM, SIGINT, SIGQUIT or SIGHUP
 # eg. when terminal window with an active zellij session is closed
 # Options:
@@ -448,7 +463,7 @@ default_shell: {{ nvim_shell }}
 
 # Choose the theme that is specified in the themes section.
 # Default: default
-#theme: default
+theme: gruvbox
 
 # Choose the mode that zellij uses when starting up.
 # Default: normal
