[Zellij] Change default theme.

--- a/templates/zellij/config.yaml.j2
+++ b/templates/zellij/config.yaml.j2
@@ -502,7 +502,7 @@ default_shell: {{ nvim_shell }}
 
 # Choose the theme that is specified in the themes section.
 # Default: default
-theme: gruvbox
+theme: tokyo-night-storm
 
 # Choose the mode that zellij uses when starting up.
 # Default: normal
