--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -66,6 +66,7 @@ require('packer').startup(function()
   -- Motion Plugins
   use 'ggandor/lightspeed.nvim'
   use 'tpope/vim-surround'
+  use 'tpope/vim-repeat'
   -- Start Screen
   use {
     "startup-nvim/startup.nvim",
