--- a/templates/zellij/config.yaml.j2
+++ b/templates/zellij/config.yaml.j2
@@ -506,7 +506,7 @@ theme: tokyo-night-storm
 
 # Choose the mode that zellij uses when starting up.
 # Default: normal
-default_mode: locked
+default_mode: normal
 
 # Toggle enabling the mouse mode.
 # On certain configurations, or terminals this could
