[Neovim] Use fm-nvim for ranger integration.

--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -60,8 +60,8 @@ nnoremap("<C-s>", "<Cmd>FloatermNew<CR>", "silent", "Floaterm: New Terminal")
 tnoremap("<C-b>", "<Cmd>FloatermPrev<CR>", "silent", "Floaterm: Previous Terminal")
 tnoremap("<C-f>", "<Cmd>FloatermNext<CR>", "silent", "Floaterm: Next Terminal")
 nnoremap("<leader>ss", "<Cmd>Floaterms<CR>", "silent", "Floaterm: Select Terminal")
-nnoremap("<leader>sb", "<Cmd>Broot<CR>", "silent", "Floaterm: Broot")
-nnoremap("<leader>sr", "<Cmd>FloatermNew ranger<CR>", "silent", "Floaterm: Ranger")
+nnoremap("<leader>sb", "<Cmd>Broot<CR>", "silent", "Floating Window: Broot")
+nnoremap("<leader>sr", "<Cmd>lua require('fm-nvim').Ranger(vim.fn.expand('%:p:~:.:h'))<CR>", "silent", "Floating Window: Ranger")
 nnoremap("<leader>s/", "<Cmd>2ToggleTerm<CR>", "silent", "ToggleTerm: Double Terminal")
 nnoremap("<leader>st", "<Cmd>3ToggleTerm<CR>", "silent", "ToggleTerm: Triple Terminal")
 nnoremap("<leader>sx", "<Cmd>ToggleTerm size=20 direction=horizontal<CR>", "silent", "ToggleTerm: Horizontal Terminal")
