[Neovim] Add fterm plugin.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -103,6 +103,7 @@ require('packer').startup(function()
     }
   }
   use 'akinsho/toggleterm.nvim'
+  use 'numToStr/FTerm.nvim'
   -- Tree Viewer
   use {
     'kyazdani42/nvim-tree.lua',
