--- a/templates/nvim/lua/user_toggleterm.lua.j2
+++ b/templates/nvim/lua/user_toggleterm.lua.j2
@@ -80,6 +80,6 @@ function _G.__fterm_btop()
     btop:toggle()
 end
 
-{% for nvim_fterm_cmd in nvim_fterm_cmds %}
-vim.api.nvim_add_user_command('{{ nvim_fterm_cmd.cmd_name }}', function() require('FTerm').run('{{ nvim_fterm_cmd.cmd_str }}') end, { bang = true })
-{% endfor %}
+-- {% for nvim_fterm_cmd in nvim_fterm_cmds %}
+-- vim.api.nvim_add_user_command('{{ nvim_fterm_cmd.cmd_name }}', function() require('FTerm').run('{{ nvim_fterm_cmd.cmd_str }}') end, { bang = true })
+-- {% endfor %}
