[Helix] Fix config.

--- a/templates/helix/config.toml.j2
+++ b/templates/helix/config.toml.j2
@@ -3,7 +3,7 @@ theme = "onedark"
 [editor]
 line-number = "relative"
 mouse = false
-shell = "{{ nvim_shell_cmd }}"
+shell = ["{{ nvim_shell_cmd }}"]
 
 [editor.cursor-shape]
 insert = "bar"
