[Zellij] Try and improve gruvbox.

--- a/templates/zellij/config.yaml.j2
+++ b/templates/zellij/config.yaml.j2
@@ -425,10 +425,10 @@ plugins:
 
 themes:
   gruvbox:
-    fg: [235,219,178]
-    bg: [146,131,116]
+    fg: [253,244,193]
+    bg: [40,40,40]
     black: [65,72,104]
-    gray: [86,95,137]
+    gray: [146,131,116]
     red: [251,73,52]
     green: [184,187,38]
     yellow: [250,189,47]
@@ -502,7 +502,7 @@ default_shell: {{ nvim_shell }}
 
 # Choose the theme that is specified in the themes section.
 # Default: default
-theme: tokyo-night-storm
+theme: gruvbox
 
 # Choose the mode that zellij uses when starting up.
 # Default: normal
