--- a/templates/nvim/lua/user_statusline.lua.j2
+++ b/templates/nvim/lua/user_statusline.lua.j2
@@ -4,7 +4,7 @@ require('lualine').setup {
   options = {
     section_separators = { left = '', right = '' },
     component_separators = { left = '', right = '' },
-    globalstatus = false,
+    globalstatus = true,
   },
 }
 
