--- a/templates/nvim/lua/user_statusline.lua.j2
+++ b/templates/nvim/lua/user_statusline.lua.j2
@@ -5,6 +5,9 @@ require('lualine').setup {
     section_separators = { left = '', right = '' },
     component_separators = { left = '', right = '' },
     globalstatus = true,
+    disabled_filetypes = {
+        'packer', 'NVimTree'
+    }
   },
 }
 
