[Neovim] Make git keymaps more intuitive.

--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -84,8 +84,8 @@ nnoremap("<leader>?", "<cmd>lua require('telescope.builtin').oldfiles()<CR>", "s
 m.nname("<leader>g", "Git")
 nnoremap("<leader>gg", "<Cmd>LazyGit<CR>", "silent", "Git: Lazygit")
 nnoremap("<leader>gb", "<Cmd>lua require('telescope.builtin').git_branches()<CR>", "silent", "Git: Pick Branch")
-nnoremap("<leader>gc", "<Cmd>lua require('telescope.builtin').git_commits()<CR>", "silent", "Git: Pick Commit")
-nnoremap("<leader>gl", "<Cmd>lua require('telescope.builtin').git_bcommits()<CR>", "silent", "Git: Pick Buffer Commit")
+nnoremap("<leader>gl", "<Cmd>lua require('telescope.builtin').git_commits()<CR>", "silent", "Git: Pick Commit")
+nnoremap("<leader>gc", "<Cmd>lua require('telescope.builtin').git_bcommits()<CR>", "silent", "Git: Pick Buffer Commit")
 nnoremap("<leader>gs", "<Cmd>lua require('telescope.builtin').git_stash()<CR>", "silent", "Git: Show Stash")
 
 -- Extra Telescope Mappings
