--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -113,7 +113,6 @@ require('packer').startup(function()
     config = function() require'nvim-tree'.setup {} end
   }
   -- Git Plugins
-  use 'kdheepak/lazygit.nvim'
   use { 'sindrets/diffview.nvim', requires = 'nvim-lua/plenary.nvim' }
   -- Task Runner
   use { 'skywind3000/asynctasks.vim',
@@ -161,7 +160,8 @@ vim.cmd [[
 ]]
 
 -- Set Editor
-vim.env.GIT_EDITOR = "{{ nix_bin }}/nvr -cc split --remote-wait +'set bufhidden=wipe'"
+-- vim.env.GIT_EDITOR = "{{ nix_bin }}/nvr -cc split --remote-wait +'set bufhidden=wipe'"
+-- vim.env.EDITOR = "{{ nix_bin }}/nvr -cc split --remote-wait +'set bufhidden=wipe'"
 
 -- Cursorline
 -- vim.g.cursorline_timeout = 100
