--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -82,7 +82,7 @@ nnoremap("<leader>?", "<cmd>lua require('telescope.builtin').oldfiles()<CR>", "s
 
 -- Git Mappings
 m.nname("<leader>g", "Git")
-nnoremap("<leader>gg", "<Cmd>LazyGit<CR>", "silent", "Git: Lazygit")
+nnoremap("<leader>gg", "<Cmd>Lazygit<CR>", "silent", "Git: Lazygit")
 nnoremap("<leader>gb", "<Cmd>lua require('telescope.builtin').git_branches()<CR>", "silent", "Git: Pick Branch")
 nnoremap("<leader>gl", "<Cmd>lua require('telescope.builtin').git_commits()<CR>", "silent", "Git: Pick Commit")
 nnoremap("<leader>gc", "<Cmd>lua require('telescope.builtin').git_bcommits()<CR>", "silent", "Git: Pick Buffer Commit")
