--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -115,9 +115,7 @@ require('packer').startup(function()
   -- Git Plugins
   use { 'sindrets/diffview.nvim', requires = 'nvim-lua/plenary.nvim' }
   -- Task Runner
-  use { 'skywind3000/asynctasks.vim',
-    requires = { 'skywind3000/asyncrun.vim', 'skywind3000/asyncrun.extra' }
-  }
+  use { 'skywind3000/asynctasks.vim', requires = 'skywind3000/asyncrun.vim' }
   -- Task Runner
   use { 'GustavoKatel/telescope-asynctasks.nvim',
     requires = {
@@ -271,8 +269,8 @@ require('user_project')
 require('user_window')
 
 -- Task Settings
-vim.g.asyncrun_open = 6
-vim.g.asynctasks_term_pos = 'toggleterm'
+-- vim.g.asyncrun_open = 6
+vim.g.asynctasks_term_pos = 'floaterm_reuse'
 vim.g.asynctasks_term_reuse = 1
 
 -- Project Config Settings
