--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -22,7 +22,7 @@ require('packer').startup(function()
   use 'numToStr/Comment.nvim' -- "gc" to comment visual regions/lines
   -- Selection UI
   use { 'nvim-telescope/telescope.nvim', requires = { 'nvim-lua/plenary.nvim' } }
-  use {'nvim-telescope/telescope-fzf-native.nvim', run = 'make' }
+  use { 'nvim-telescope/telescope-fzf-native.nvim', run = 'make' }
   -- Status/Tab Line
   use {
     'nvim-lualine/lualine.nvim',
@@ -30,9 +30,9 @@ require('packer').startup(function()
   }
   use {
     'kdheepak/tabline.nvim',
-    requires = { { 'nvim-lualine/lualine.nvim', opt=true }, {'kyazdani42/nvim-web-devicons', opt = true} }
+    requires = { { 'nvim-lualine/lualine.nvim', opt = true }, { 'kyazdani42/nvim-web-devicons', opt = true } }
   }
-  use {'TC72/telescope-tele-tabby.nvim', requires = 'nvim-telescope/telescope.nvim'}
+  use { 'TC72/telescope-tele-tabby.nvim', requires = 'nvim-telescope/telescope.nvim' }
   -- Theme
   use 'sainnhe/gruvbox-material'
   -- Add indentation guides even on blank lines
@@ -40,21 +40,21 @@ require('packer').startup(function()
   -- Add git related info in the signs columns and popups
   use { 'lewis6991/gitsigns.nvim', requires = { 'nvim-lua/plenary.nvim' } }
   -- Highlight, edit, and navigate code using a fast incremental parsing library
-  use {'nvim-treesitter/nvim-treesitter', run = ':TSUpdate'}
+  use { 'nvim-treesitter/nvim-treesitter', run = ':TSUpdate' }
+  use 'nvim-treesitter/nvim-treesitter-textobjects'
   -- Better Highlighting
   use 'kevinhwang91/nvim-hlslens'
   use { 'petertriho/nvim-scrollbar', requires = { 'kevinhwang91/nvim-hlslens' } }
-  -- Additional textobjects for treesitter
-  use {'ray-x/navigator.lua', requires = {
-    'nvim-treesitter/nvim-treesitter',
-    'nvim-treesitter/nvim-treesitter-textobjects',
-    'ray-x/guihua.lua',
-    run = 'cd lua/fzy && make'
-    }
-  }
-  use 'nvim-treesitter/nvim-treesitter-textobjects'
   use "IndianBoy42/tree-sitter-just"
   -- LSP Plugins
+  Plug 'gfanto/fzf-lsp.nvim'
+  --use { 'ray-x/navigator.lua', requires = {
+  --  'nvim-treesitter/nvim-treesitter',
+  --  'nvim-treesitter/nvim-treesitter-textobjects',
+  --  'ray-x/guihua.lua',
+  --  run = 'cd lua/fzy && make'
+  --}
+  --}
   use 'neovim/nvim-lspconfig'
   use 'hrsh7th/nvim-cmp' -- Autocompletion plugin
   use 'hrsh7th/cmp-nvim-lsp'
@@ -62,7 +62,7 @@ require('packer').startup(function()
   use 'L3MON4D3/LuaSnip' -- Snippets plugin
   use 'simrat39/symbols-outline.nvim'
   -- Cursorline Plugin
---use 'yamatsum/nvim-cursorline'
+  --use 'yamatsum/nvim-cursorline'
   -- Motion Plugins
   use 'ggandor/lightspeed.nvim'
   use 'tpope/vim-surround'
@@ -70,9 +70,9 @@ require('packer').startup(function()
   -- Start Screen
   use {
     "startup-nvim/startup.nvim",
-    requires = {"nvim-telescope/telescope.nvim", "nvim-lua/plenary.nvim"},
+    requires = { "nvim-telescope/telescope.nvim", "nvim-lua/plenary.nvim" },
     config = function()
-      require"startup".setup()
+      require "startup".setup()
     end
   }
   -- Project Management
@@ -88,12 +88,12 @@ require('packer').startup(function()
   -- Keymap Plugins
   use { 'b0o/mapx.nvim', requires = { 'folke/which-key.nvim' } }
   -- Quickfix Plugin
-  use {'kevinhwang91/nvim-bqf'}
+  use { 'kevinhwang91/nvim-bqf' }
   -- Split/Window Management
   use 'sindrets/winshift.nvim'
   use 'mrjones2014/smart-splits.nvim'
   -- File Manager Plugin
-  use {'is0n/fm-nvim'}
+  use { 'is0n/fm-nvim' }
   -- Terminal Plugins
   use { 'voldikss/vim-floaterm',
     requires = {
@@ -110,7 +110,7 @@ require('packer').startup(function()
     requires = {
       'kyazdani42/nvim-web-devicons', -- optional, for file icon
     },
-    config = function() require'nvim-tree'.setup {} end
+    config = function() require 'nvim-tree'.setup {} end
   }
   -- Git Plugins
   use { 'sindrets/diffview.nvim', requires = 'nvim-lua/plenary.nvim' }
@@ -129,20 +129,20 @@ require('packer').startup(function()
   }
   -- Neorg/Org Mode
   use { 'nvim-neorg/neorg', requires = {
-      'nvim-lua/plenary.nvim',
-      'nvim-neorg/neorg-telescope',
-    }
+    'nvim-lua/plenary.nvim',
+    'nvim-neorg/neorg-telescope',
   }
-  -- Formatter
---use 'sbdchd/neoformat'
-  -- Language Server Protocol Providers
-{{ lsp_provider_plugins_file or "-- No LSP Providers Installed" }}
+  }
+      -- Formatter
+      --use 'sbdchd/neoformat'
+      -- Language Server Protocol Providers
+      { { lsp_provider_plugins_file or "-- No LSP Providers Installed" } }
   -- Language Server Protocol Providers(End)
   -- Debug Adapter Protocol
-  use { "rcarriga/nvim-dap-ui", requires = {"mfussenegger/nvim-dap"} }
-  -- Debug Adapter Protocol(End)
-  -- Language Plugins
-{{ language_neovim_plugins_file or "-- No Language Plugins Installed" }}
+  use { "rcarriga/nvim-dap-ui", requires = { "mfussenegger/nvim-dap" } }
+      -- Debug Adapter Protocol(End)
+      -- Language Plugins
+      { { language_neovim_plugins_file or "-- No Language Plugins Installed" } }
   -- Language Plugins(End)
 end)
 
