--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -103,11 +103,11 @@ nnoremap("<leader>nl", "<cmd>Telescope neorg insert_file_link<CR>", "silent", { 
 -- nnoremap("<leader>el", "<cmd>lua vim.diagnostic.setloclist()<CR>", "silent", "Diagnostic: Set Location List")
 
 -- LSP Mappings
--- m.nname("<leader>l", "LSP")
--- nnoremap("<leader>li", ":LspInfo<Cr>",    "LSP: Show LSP information")
--- nnoremap("<leader>lr", ":LspRestart<Cr>", "LSP: Restart LSP")
--- nnoremap("<leader>ls", ":LspStart<Cr>",   "LSP: Start LSP")
--- nnoremap("<leader>lS", ":LspStop<Cr>",    "LSP: Stop LSP")
+m.nname("<leader>l", "LSP")
+nnoremap("<leader>li", ":LspInfo<Cr>",    "LSP: Show LSP information")
+nnoremap("<leader>lr", ":LspRestart<Cr>", "LSP: Restart LSP")
+nnoremap("<leader>ls", ":LspStart<Cr>",   "LSP: Start LSP")
+nnoremap("<leader>lS", ":LspStop<Cr>",    "LSP: Stop LSP")
 -- nnoremap("gD", "<cmd>lua vim.lsp.buf.declaration()<Cr>", "silent", "LSP: Goto Declaration")
 -- nnoremap("gd", "<cmd>lua vim.lsp.buf.definition()<CR>", "silent", "LSP: Goto Definition")
 -- nnoremap("gi", "<cmd>lua vim.lsp.buf.implementation()<CR>", "silent", "LSP: Goto Implementation")
