[Neovim] Add keymaps for fzf-lsp.

--- a/templates/nvim/lua/user_keymaps.lua.j2
+++ b/templates/nvim/lua/user_keymaps.lua.j2
@@ -108,6 +108,19 @@ nnoremap("<leader>li", ":LspInfo<Cr>",    "LSP: Show LSP information")
 nnoremap("<leader>lr", ":LspRestart<Cr>", "LSP: Restart LSP")
 nnoremap("<leader>ls", ":LspStart<Cr>",   "LSP: Start LSP")
 nnoremap("<leader>lS", ":LspStop<Cr>",    "LSP: Stop LSP")
+nnoremap("gD", ":Definitions<Cr>", "silent", "LSP: Goto Definition")
+nnoremap("gd", ":Declarations<CR>", "silent", "LSP: Goto Declaration")
+nnoremap("gi", ":Implementations<CR>", "silent", "LSP: Goto Implementation")
+nnoremap("gT", ":TypeDefinitions<CR>", "silent", "LSP: Goto Type Definitions")
+nnoremap("gr", ":References<CR>", "silent", "LSP: Find References")
+nnoremap("gs", ":DocumentSymbols<CR>", "silent", "LSP: Find Document Symbols")
+nnoremap("gS", ":WorkspaceSymbols<CR>", "silent", "LSP: Find Workspace Symbols")
+nnoremap("gL", ":Diagnostics<CR>", "silent", "LSP: Show Buffer Diagnostics")
+nnoremap("gG", ":DiagnosticsAll<CR>", "silent", "LSP: Show All Diagnostics")
+nnoremap("<leader>gi", ":IncomingCalls<CR>", "silent", "LSP: Show Incoming Calls")
+nnoremap("<leader>go", ":OutgoingCalls<CR>", "silent", "LSP: Show Outgoing Calls")
+nnoremap("<leader>ca", ":CodeActions<CR>", "silent", "LSP: Code Actions")
+nnoremap("<leader>cA", ":RangeCodeActions<CR>", "silent", "LSP: Range Code Actions")
 -- nnoremap("gD", "<cmd>lua vim.lsp.buf.declaration()<Cr>", "silent", "LSP: Goto Declaration")
 -- nnoremap("gd", "<cmd>lua vim.lsp.buf.definition()<CR>", "silent", "LSP: Goto Definition")
 -- nnoremap("gi", "<cmd>lua vim.lsp.buf.implementation()<CR>", "silent", "LSP: Goto Implementation")
