--- a/templates/zellij/themes/gruvbox.yaml.j2
+++ b/templates/zellij/themes/gruvbox.yaml.j2
@@ -1,14 +1,25 @@
 themes:
-  gruvbox:
-    fg: [253,244,193]
-    bg: [40,40,40]
-    black: [65,72,104]
-    gray: [146,131,116]
-    red: [251,73,52]
-    green: [184,187,38]
-    yellow: [250,189,47]
-    blue: [131,165,152]
-    magenta: [211,134,155]
-    cyan: [142,192,124]
-    white: [192,202,245]
-    orange: [254,128,25]
+  gruvbox-dark:
+    bg: [40, 40, 40]
+    red: [204, 36, 29]
+    green: [152, 151, 26]
+    yellow: [215, 153, 33]
+    blue: [69, 133, 136]
+    magenta: [177, 98, 134]
+    orange: [214, 93, 14]
+    fg: [213, 196, 161]
+    cyan: [104, 157, 106]
+    black: [60, 56, 54]
+    white: [251, 241, 199]
+  gruvbox-light:
+    bg: [251, 82, 75]
+    red: [205, 75, 69]
+    green: [152, 151, 26]
+    yellow: [215, 153, 33]
+    blue: [69, 133, 136]
+    magenta: [177, 98, 134]
+    orange: [214, 93, 14]
+    fg: [60, 56, 54]
+    cyan: [104, 157, 106]
+    black: [40, 40, 40]
+    white: [213, 196, 161]
