[Zellij] Add rounded ui frames.

--- a/templates/zellij/config.yaml.j2
+++ b/templates/zellij/config.yaml.j2
@@ -440,6 +440,11 @@ plugins:
 # Default: $SHELL
 default_shell: {{ nvim_shell }}
 
+# Rounded Frames
+ui:
+  pane_frames:
+    rounded_corners: true
+
 # Toggle between having pane frames around the panes
 # Options:
 #   - true (default)
