[Zellij] Add One-Half theme.

--- a/templates/zellij/config.yaml.j2
+++ b/templates/zellij/config.yaml.j2
@@ -454,6 +454,18 @@ ui:
 # Choose the theme that is specified in the themes section.
 # Default: default
 themes:
+  one-half-dark:
+    bg: [40, 44, 52]
+    red: [227, 63, 76]
+    green: [152, 195, 121]
+    yellow: [229, 192, 123]
+    blue: [97, 175, 239]
+    magenta: [198, 120, 221]
+    orange: [216, 133, 76]
+    fg: [220, 223, 228]
+    cyan: [86, 182, 194]
+    black: [27, 29, 35]
+    white: [233, 225, 254]
   gruvbox-dark:
     bg: [40, 40, 40]
     red: [204, 36, 29]
@@ -478,7 +490,7 @@ themes:
     cyan: [104, 157, 106]
     black: [40, 40, 40]
     white: [213, 196, 161]
-theme: gruvbox-light
+theme: gruvbox-dark
 
 # Choose the mode that zellij uses when starting up.
 # Default: normal
